[gd_scene load_steps=51 format=2]

[ext_resource path="res://enemic1/MORIS_/png si/12.png" type="Texture" id=1]
[ext_resource path="res://enemic1/MORIS_/Moris.gd" type="Script" id=2]
[ext_resource path="res://lletres/Scratch Boys.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://enemic1/MORIS_/vida.gd" type="Script" id=4]
[ext_resource path="res://enemic1/MORIS_/icones/icon_vida.jpg" type="Texture" id=5]
[ext_resource path="res://enemic1/MORIS_/mana.gd" type="Script" id=6]
[ext_resource path="res://enemic1/MORIS_/icones/color_azul.jpg" type="Texture" id=7]
[ext_resource path="res://pantalla_pausa.tscn" type="PackedScene" id=8]
[ext_resource path="res://pantalla_controls_en_pausa.tscn" type="PackedScene" id=9]
[ext_resource path="res://totes_les_bombolles.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemic1/MORIS_/MorisRoot.gd" type="Script" id=11]
[ext_resource path="res://enemic1/MORIS_/png si/14.png" type="Texture" id=12]
[ext_resource path="res://enemic1/MORIS_/png si/6.png" type="Texture" id=13]
[ext_resource path="res://enemic1/MORIS_/png si/8.png" type="Texture" id=14]
[ext_resource path="res://enemic1/MORIS_/png si/5.png" type="Texture" id=15]
[ext_resource path="res://enemic1/MORIS_/png si/4.png" type="Texture" id=16]
[ext_resource path="res://enemic1/MORIS_/png si/1.png" type="Texture" id=17]
[ext_resource path="res://enemic1/MORIS_/png si/13.png" type="Texture" id=18]
[ext_resource path="res://enemic1/MORIS_/png si/2.png" type="Texture" id=19]
[ext_resource path="res://enemic1/MORIS_/png si/7.png" type="Texture" id=20]
[ext_resource path="res://enemic1/MORIS_/png si/3.png" type="Texture" id=21]
[ext_resource path="res://enemic1/MORIS_/png si/10.png" type="Texture" id=22]
[ext_resource path="res://enemic1/MORIS_/png si/11.png" type="Texture" id=23]
[ext_resource path="res://enemic1/MORIS_/png si/9.png" type="Texture" id=24]
[ext_resource path="res://enemic1/MORIS_/png si/15.png" type="Texture" id=25]
[ext_resource path="res://enemic1/MORIS_/mini_escut.gd" type="Script" id=26]
[ext_resource path="res://enemic1/escut.png" type="Texture" id=27]
[ext_resource path="res://enemic1/MORIS_/imatges def/14.png" type="Texture" id=28]
[ext_resource path="res://enemic1/MORIS_/imatges def/15.png" type="Texture" id=29]
[ext_resource path="res://enemic1/MORIS_/imatges def/3.png" type="Texture" id=30]
[ext_resource path="res://enemic1/MORIS_/imatges def/2.png" type="Texture" id=31]
[ext_resource path="res://enemic1/MORIS_/imatges def/8.png" type="Texture" id=32]
[ext_resource path="res://enemic1/MORIS_/imatges def/6.png" type="Texture" id=33]
[ext_resource path="res://enemic1/MORIS_/imatges def/7.png" type="Texture" id=34]
[ext_resource path="res://enemic1/MORIS_/imatges def/4.png" type="Texture" id=35]
[ext_resource path="res://enemic1/MORIS_/imatges def/1.png" type="Texture" id=36]
[ext_resource path="res://enemic1/MORIS_/imatges def/5.png" type="Texture" id=37]
[ext_resource path="res://enemic1/MORIS_/imatges def/9.png" type="Texture" id=38]
[ext_resource path="res://enemic1/MORIS_/imatges def/11.png" type="Texture" id=39]
[ext_resource path="res://enemic1/MORIS_/imatges def/10.png" type="Texture" id=40]
[ext_resource path="res://enemic1/MORIS_/imatges def/12.png" type="Texture" id=41]
[ext_resource path="res://enemic1/MORIS_/imatges def/13.png" type="Texture" id=42]

[sub_resource type="Shader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "atac1__",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 25 ) ],
"loop": true,
"name": "cura__",
"speed": 3.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 39 ) ],
"loop": true,
"name": "atac1",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 1 ), ExtResource( 18 ) ],
"loop": true,
"name": "run__",
"speed": 6.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "saltant__",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "iddle__",
"speed": 3.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "cura",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "saltant",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 35 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 31 ) ],
"loop": true,
"name": "iddle",
"speed": 2.33
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 98.933, 195.605 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 103.59
height = 292.947

[sub_resource type="DynamicFont" id=6]
size = 68
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="Moris" type="KinematicBody2D" parent="."]
position = Vector2( 203.728, 508.981 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Moris"]
material = SubResource( 2 )
position = Vector2( 58.6829, 201.55 )
scale = Vector2( 0.303713, 0.303713 )
frames = SubResource( 3 )
animation = "atac1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moris"]
position = Vector2( 65.2829, 293.865 )
shape = SubResource( 4 )

[node name="area_atac" type="Area2D" parent="Moris"]
position = Vector2( 2.99658, 0 )

[node name="colision_atac" type="CollisionShape2D" parent="Moris/area_atac"]
position = Vector2( 59.3899, 366.6 )
rotation = 1.56823
shape = SubResource( 5 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="Moris"]
position = Vector2( 52.7768, 252.96 )
current = true
zoom = Vector2( 3, 2.8 )

[node name="Label" type="Label" parent="Moris"]
visible = false
margin_left = -92.6426
margin_top = 133.538
margin_right = 293.357
margin_bottom = 240.538
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aigua" type="Timer" parent="Moris"]
autostart = true

[node name="mana" type="Timer" parent="Moris"]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="vida" type="TextureProgress" parent="CanvasLayer"]
margin_left = 28.2405
margin_top = 8.40507
margin_right = 478.241
margin_bottom = 458.405
rect_scale = Vector2( 1, 0.15 )
max_value = 500.0
value = 500.0
texture_progress = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/vida"]

[node name="text_vida" type="Label" parent="CanvasLayer/vida"]
margin_left = 454.0
margin_top = 37.0
margin_right = 612.0
margin_bottom = 93.0
rect_scale = Vector2( 1, 6.667 )
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana" type="TextureProgress" parent="CanvasLayer"]
margin_left = 28.0427
margin_top = 75.5599
margin_right = 1028.04
margin_bottom = 1075.56
rect_scale = Vector2( 0.45, 0.04 )
max_value = 500.0
value = 500.0
texture_progress = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/mana"]

[node name="text_mana" type="Label" parent="CanvasLayer/mana"]
margin_left = 1012.0
margin_top = 33.0
margin_right = 1161.0
margin_bottom = 83.0
rect_scale = Vector2( 2.222, 25 )
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mini_escut" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.803922, 0.796078, 0.00392157, 1 )
self_modulate = Color( 0.0509804, 0.494118, 0.164706, 1 )
position = Vector2( 954.63, 89.9907 )
rotation = 1.5708
scale = Vector2( 0.192497, 0.189158 )
texture = ExtResource( 27 )
script = ExtResource( 26 )

[node name="totes_les_bombolles" parent="CanvasLayer" instance=ExtResource( 10 )]
position = Vector2( 57.3472, 143.534 )
scale = Vector2( 0.5, 0.5 )

[node name="pantalla_controls_en_pausa" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="pantalla_pausa" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
[connection signal="canvi_mana" from="Moris" to="CanvasLayer/mana" method="_on_Moris_canvi_mana"]
[connection signal="canvi_vida" from="Moris" to="CanvasLayer/vida" method="_on_Moris_canvi_vida"]
[connection signal="oxigen" from="Moris" to="CanvasLayer/totes_les_bombolles" method="_on_Moris_oxigen"]
[connection signal="animation_finished" from="Moris/AnimatedSprite" to="Moris" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Moris/area_atac" to="Moris" method="_on_area_atac_body_entered"]
[connection signal="timeout" from="Moris/aigua" to="Moris" method="_on_aigua_timeout"]
[connection signal="timeout" from="Moris/mana" to="Moris" method="_on_mana_timeout"]
[connection signal="tween_completed" from="CanvasLayer/vida/Tween" to="CanvasLayer/vida" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="CanvasLayer/mana/Tween" to="CanvasLayer/mana" method="_on_Tween_tween_completed"]
